--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -2,29 +2,35 @@
 
 {% block body %}
 
-    <h2>Register</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-l1 col-md-4 mx-auto mt-5">
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+            <h2>Register</h2>
 
-    <form action="{% url 'register' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" autofocus type="text" name="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Register">
-    </form>
+            {% if message %}
+                <div style="color: red; background-color: white;">{{ message }}</div>
+            {% endif %}
 
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+            <form action="{% url 'register' %}" method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <input class="form-control" autofocus type="text" name="username" placeholder="Username">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="email" name="email" placeholder="Email Address">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="password" name="password" placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+                </div>
+                <input class="btn btn-primary" type="submit" value="Register">
+            </form>
 
+            Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+         </div>
+    </div>
+</div>
 {% endblock %}
