--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -13,19 +13,25 @@
             <form action="{% url 'register' %}" method="post">
                 {% csrf_token %}
                 <div class="form-group input-field">
-                    <input class="form-control bg-white {% if message %}is-invalid{% endif %}" id="username-input" autofocus type="text" name="username" placeholder="Username">
-                    {% if message %}
-                    <div class="username-error">{{ message }}</div>
+                    <input class="form-control bg-white {% if username_error %}is-invalid{% endif %}" id="username-input" autofocus type="text" name="username" placeholder="Username">
+                    {% if username_error %}
+                    <div class="username_error">{{ username_error }}</div>
                     {% endif %}
                 </div>
                 <div class="form-group">
                     <input class="form-control" type="email" name="email" placeholder="Email Address">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="password" name="password" placeholder="Password">
+                    <input class="form-control {% if password_error %}is-invalid{% endif %}" type="password" name="password" placeholder="Password">
+                    {% if password_error %}
+                    <div class="password_error">{{ password_error }}</div>
+                    {% endif %}
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+                    <input class="form-control {% if password_error %}is-invalid{% endif %}" type="password" name="confirmation" placeholder="Confirm Password">
+                    {% if password_error %}
+                    <div class="password_error">{{ password_error }}</div>
+                    {% endif %}
                 </div>
                 <input class="btn btn-primary" type="submit" value="Register">
             </form>
