--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -10,16 +10,16 @@
 
                 <h2>Login</h2>
 
-                {% if message %}
-                    <div>{{ message }}</div>
-                {% endif %}
                 <form action="{% url 'login' %}" method="post">
                     {% csrf_token %}
                     <div class="form-group">
-                        <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+                        <input autofocus class="form-control {% if validation_error %}is-invalid{% endif %}" type="text" name="username" placeholder="Username">
+                        {% if validation_error %}
+                            <div class="validation_error">{{ validation_error }}</div>
+                        {% endif %}
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="password" name="password" placeholder="Password">
+                        <input class="form-control {% if validation_error %}is-invalid{% endif %}" type="password" name="password" placeholder="Password">
                     </div>
                     <input class="btn btn-primary" type="submit" value="Login">
                 </form>
