--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -48,5 +48,6 @@
         <hr>
         {% block body %}
         {% endblock %}
+        <script src="{% static 'auctions/script.js' %}"></script>
     </body>
 </html>
