--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -6,14 +6,15 @@
     <div class="row">
         <div class="col-l1 col-md-4 mx-auto mt-5">
 
-            <h2>Register</h2>
+            <h2 class="mb-3">Register</h2>
 
 
 
             <form action="{% url 'register' %}" method="post">
                 {% csrf_token %}
                 <div class="form-group input-field">
-                    <input class="form-control bg-white {% if username_error %}is-invalid{% endif %}" id="username-input" autofocus type="text" name="username" placeholder="Username">
+                    <input class="form-control bg-white {% if username_error %}is-invalid{% endif %}" id="username-input" autofocus type="text" name="username">
+                    <label for="username">Username:</label>
                     {% if username_error %}
                         <div class="username_error">{{ username_error }}</div>
                     {% endif %}
