--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -14,22 +14,25 @@
                 {% csrf_token %}
                 <div class="form-group input-field">
                     <input class="form-control bg-white {% if username_error %}is-invalid{% endif %}" id="username-input" autofocus type="text" name="username">
-                    <label for="username">Username:</label>
+                    <label for="username">Username</label>
                     {% if username_error %}
                         <div class="username_error">{{ username_error }}</div>
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="email" name="email" placeholder="Email Address">
+                    <input class="form-control" type="email" name="email">
+                    <label for="username">Email Address</label>
                 </div>
                 <div class="form-group">
-                    <input class="form-control {% if password_error %}is-invalid{% endif %}" type="password" name="password" placeholder="Password">
+                    <input class="form-control {% if password_error %}is-invalid{% endif %}" type="password" name="password">
+                    <label for="username">Password</label>
                     {% if password_error %}
                         <div class="password_error">{{ password_error }}</div>
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    <input class="form-control {% if password_error %}is-invalid{% endif %}" type="password" name="confirmation" placeholder="Confirm Password">
+                    <input class="form-control {% if password_error %}is-invalid{% endif %}" type="password" name="confirmation">
+                    <label for="username">Confirm Password</label>
                     {% if password_error %}
                         <div class="password_error">{{ password_error }}</div>
                     {% endif %}
