--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -12,14 +12,16 @@
 
                 <form action="{% url 'login' %}" method="post">
                     {% csrf_token %}
-                    <div class="form-group">
-                        <input autofocus class="form-control {% if validation_error %}is-invalid{% endif %}" type="text" name="username" placeholder="Username">
+                    <div class="form-group input-field">
+                        <input autofocus class="{% if validation_error %}is-invalid{% endif %}" type="text" name="username" placeholder="Username">
+                        <label for="username">Username</label>
                         {% if validation_error %}
                             <div class="validation_error">{{ validation_error }}</div>
                         {% endif %}
                     </div>
-                    <div class="form-group">
-                        <input class="form-control {% if validation_error %}is-invalid{% endif %}" type="password" name="password" placeholder="Password">
+                    <div class="form-group input-field">
+                        <input class="{% if validation_error %}is-invalid{% endif %}" type="password" name="password" placeholder="Password">
+                        <label for="password">Password</label>
                     </div>
                     <input class="btn btn-primary" type="submit" value="Login">
                 </form>
