--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -32,4 +32,4 @@
     
 {% endblock %}
 
-{% comment %} orgigin web50/projects/2020/x/commerce {% endcomment %}
+<!--  orgigin web50/projects/2020/x/commerce -->
