--- a/auctions/templates/auctions/create_listing.html
+++ b/auctions/templates/auctions/create_listing.html
@@ -13,8 +13,8 @@
         <label for="image_url">Image Url:</label>
         <input type="text" name="image_url" placeholder="Enter image_url"><br>
 
-        <label for="price">Price:</label>
-        <input type="number" name="price" placeholder="price"><br>
+        <label for="starting_bid">Price:</label>
+        <input type="number" min="0" name="starting_bid" placeholder="price"><br>
 
         <div class="form-group">
             <label for="category">Categories:</label>
