--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -2,6 +2,20 @@
 
 {% block body %}
 
+<div class="container">
+    {% if message %}
+        {% if updated %}
+            <div class="alert alert-success" role="alert">
+                {{ message }}
+            </div>
+        {% else %}
+            <div class="alert alert-danger" role="alert">
+                {{ message }}
+            </div>
+        {% endif %}
+    {% endif %}
+</div>
+
 <div class="row mx-3">
     {% if user.is_authenticated %}
         {% if check_listing_in_watchlist %}
@@ -21,5 +35,40 @@
    <img src="{{ listing.image_url }}" alt="{{ listing.title }}" height="400px">
    <p>{{ listing.description }}</p>
    <p>Owner: {{ listing.owner }}</p>
-   <h6><strong>R</strong> {{ listing.starting_bid }}</h6>
+   <h6><strong>R</strong> {{ listing.starting_bid.bid }}</h6>
+   
+   {% if user.is_authenticated %}
+        <form action="{% url 'add_bid' id=listing.id %}" method="POST">
+            {% csrf_token %}
+            <label for="new_bid">Add bid: </label>
+            <input type="number" min="0" name="starting_bid" placeholder="Add New bid">
+
+            <button type="submit" class="btn btn-primary">Add</button>
+        </form>
+   {% endif %}
+
+   <h2>Comments</h2>
+   <div class="row mx-3">
+        {% if user.is_authenticated %}
+            <form action="{% url 'add_comment' id=listing.id %}" method="POST">
+                {% csrf_token %}
+                <label for="new_comment">Add Comment: </label>
+                <input type="text" name="new_comment" placeholder="Add New Comments">
+
+                <button type="submit" class="btn btn-warning">Add</button>
+            </form>
+        {% endif %}
+        <br>
+        
+        <ul class="list-group">
+            {% for comment in all_comments %}
+                <li class="list-group-item">
+                    {{ comment.message }}
+                    <p>Posted by {{ comment.author }}</p>
+                </li>
+            {% endfor %}
+        </ul>
+
+            
+   </div>
 {% endblock %}
