--- a/auctions/templates/auctions/create_listing.html
+++ b/auctions/templates/auctions/create_listing.html
@@ -1,7 +1,8 @@
 {% extends "auctions/layout.html" %}
+{% block title %}| Add Auction{% endblock %}
 
 {% block body %}
-    <h2>Create New Item</h2>
+    <h2>Create Auction</h2>
     <form action="{% url 'create_listing' %}" method="POST">
         {% csrf_token %}
         <label for="title">Title:</label>
