--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,33 +1,41 @@
+
+/*--------------------------------------------------------------
+# General
+--------------------------------------------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 body {
     padding: 10px;
 }
+/*--------------------------------------------------------------
+# End of general
+--------------------------------------------------------------*/
 
-/* register */
+
+
+/*--------------------------------------------------------------
+# Register
+--------------------------------------------------------------*/
 input.form-control {
-    background-color: white; /* Background color for default state */
-    border-color: #ced4da; /* Optional: Light border color to match a typical input field */
+    background-color: white;
+    border-color: #ced4da;
 }
 
-/* Override focus state to ensure background remains white */
 input.form-control:focus {
-    background-color: white; /* Background color when focused */
-    border-color: #80bdff; /* Optional: Border color change on focus for better visibility */
-    outline: none; /* Optional: Remove default outline */
+    background-color: white; 
+    border-color: #80bdff; 
+    outline: none; 
 }
 
-/* Additional styling to handle invalid state if needed */
 input.form-control.is-invalid:focus {
-    background-color: white; /* Ensure background stays white when input is invalid and focused */
-    border-color: red; /* Optional: Red border color to indicate error */
+    background-color: white;
+    border-color: red; 
 }
 
 .input-field {
     position: relative;
 }
 
-/* Input field general styles */
 .input-field input {
     height: 40px;
     width: 352px;
@@ -35,12 +43,11 @@ input.form-control.is-invalid:focus {
     font-size: 15px;
     padding: 0 15px;
     border: 1px solid #cac8c8;
-    background: white; /* Ensure white background */
+    background: white; 
     color: black;
     outline: none;
 }
 
-/* Input field label styles */
 .input-field label {
     position: absolute;
     top: 50%;
@@ -54,7 +61,6 @@ input.form-control.is-invalid:focus {
     padding: 0 5px;
 }
 
-/* Adjust label position and size when input is focused or has content */
 .input-field input:focus ~ label,
 .input-field input:not(:placeholder-shown) ~ label {
     top: 0;
@@ -63,14 +69,12 @@ input.form-control.is-invalid:focus {
     background: white;
 }
 
-/* Resetting label style when input is empty and not focused */
 .input-field input:not(.not-empty):not(:focus) ~ label {
     top: 50%;
     transform: translateY(-50%);
     font-size: 16px;
 }
 
-/* Override autofill styles */
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
@@ -130,6 +134,281 @@ input:-webkit-autofill:active {
     
 }
 
+/*--------------------------------------------------------------
+# End of register
+--------------------------------------------------------------*/
 
 
-/* end of register */
+/*--------------------------------------------------------------
+# Header
+--------------------------------------------------------------*/
+#header {
+    height: 80px;
+    transition: all 0.5s;
+    z-index: 997;
+    transition: all 0.5s;
+    background: #008080;
+  }
+  
+  #header.header-transparent {
+    background: none;
+  }
+  
+  #header.header-scrolled {
+    background: rgba(30, 67, 86, 0.8);
+    height: 60px;
+  }
+  
+  #header .logo h1 {
+    font-size: 28px;
+    margin: 0;
+    padding: 4px 0;
+    line-height: 1;
+    font-weight: 400;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+  }
+  
+  #header .logo h1 a,
+  #header .logo h1 a:hover {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  #header .logo img {
+    padding: 0;
+    margin: 0;
+    max-height: 40px;
+  }
+  
+  #main {
+    margin-top: 80px;
+  }
+
+  /**
+* Navigation Menu
+*/
+.navbar {
+    padding: 0;
+  }
+  
+  .navbar ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    align-items: center;
+  }
+  
+  .navbar li {
+    position: relative;
+  }
+  
+  .navbar a,
+  .navbar a:focus {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0 10px 30px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 14px;
+    color: #fff;
+    white-space: nowrap;
+    transition: 0.3s;
+  }
+  
+  .navbar a i,
+  .navbar a:focus i {
+    font-size: 12px;
+    line-height: 0;
+    margin-left: 5px;
+  }
+  
+  .navbar a:hover,
+  .navbar .active,
+  .navbar .active:focus,
+  .navbar li:hover>a {
+    color: #40E0D0;
+  }
+  
+  /* 
+  # login and register buttons
+  */
+  .btn-login {
+    color: #40E0D0;
+    border-color: #40E0D0;
+    background-color: transparent;
+    border-width: 1px;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-login:hover {
+    color: #fff;
+    background-color: #40E0D0;
+    border-color: #40E0D0;
+}
+
+.btn-register {
+    color: #fff;
+    background-color: #40E0D0;
+    border-color: #40E0D0;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-register:hover {
+    color: #fff;
+    background-color: #008080;
+    border-color: #40E0D0;
+}
+
+
+  /*--------------------------------------------------------------
+# End of header
+--------------------------------------------------------------*/
+
+
+
+/*--------------------------------------------------------------
+# Portfolio
+--------------------------------------------------------------*/
+.portfolio {
+    padding-bottom: 60px;
+  }
+  
+  .portfolio #portfolio-flters {
+    padding: 0;
+    margin: 0 0 35px 0;
+    list-style: none;
+    text-align: center;
+  }
+  
+  .portfolio #portfolio-flters li {
+    cursor: pointer;
+    margin: 0 12px 5px 12px;
+    display: inline-block;
+    padding: 0 4px 6px 4px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+    color: #444;
+    transition: all 0.3s ease-in-out;
+    border-bottom: 2px solid #fff;
+    font-family: "Roboto", sans-serif;
+  }
+  
+  .portfolio #portfolio-flters li:hover,
+  .portfolio #portfolio-flters li.filter-active {
+    border-color: #008080;
+    color: #008080;
+  }
+  
+  .portfolio .portfolio-item {
+    background: #008080;
+    overflow: hidden;
+    min-height: 200px;
+    position: relative;
+    border-radius: 4px;
+    margin: 0 0 30px 0;
+  }
+  
+  .portfolio .portfolio-item img {
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .portfolio .portfolio-item .portfolio-info {
+    opacity: 0;
+    position: absolute;
+    transition: all 0.3s linear;
+    text-align: center;
+    top: 10%;
+    left: 0;
+    right: 0;
+  }
+  
+  .portfolio .portfolio-item .portfolio-info h3 {
+    font-size: 22px;
+    color: #fff;
+    font-weight: bold;
+  }
+  
+  .portfolio .portfolio-item .portfolio-info a i {
+    color: rgba(255, 255, 255, 0.6);
+    font-size: 28px;
+    transition: 0.3s;
+  }
+  
+  .portfolio .portfolio-item .portfolio-info a i:hover {
+    color: white;
+  }
+  
+  .portfolio .portfolio-item:hover img {
+    opacity: 0.6;
+    transform: scale(1.1);
+  }
+  
+  .portfolio .portfolio-item:hover .portfolio-info {
+    opacity: 1;
+    top: calc(50% - 30px);
+  }
+
+/*--------------------------------------------------------------
+# End of Portfolio
+--------------------------------------------------------------*/
+
+
+
+/*--------------------------------------------------------------
+# Breadcrumbs
+--------------------------------------------------------------*/
+.breadcrumbs {
+    padding: 15px 0;
+    background-color: #f3f8fa;
+    min-height: 40px;
+  }
+  
+  .breadcrumbs h2 {
+    font-size: 28px;
+    font-weight: 300;
+  }
+  
+  .breadcrumbs ol {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .breadcrumbs ol li+li {
+    padding-left: 10px;
+  }
+  
+  .breadcrumbs ol li+li::before {
+    display: inline-block;
+    padding-right: 10px;
+    color: #6c757d;
+    content: "/";
+  }
+
+  /*--------------------------------------------------------------
+# End of readcrumbs
+--------------------------------------------------------------*/
+
+
+
+  /*--------------------------------------------------------------
+# 
+--------------------------------------------------------------*/
+
+
+  /*--------------------------------------------------------------
+# End of 
+--------------------------------------------------------------*/
