--- a/auctions/templates/auctions/create_listing.html
+++ b/auctions/templates/auctions/create_listing.html
@@ -2,32 +2,96 @@
 {% block title %}| Add Auction{% endblock %}
 
 {% block body %}
-    <h2>Create Auction</h2>
-    <form action="{% url 'create_listing' %}" method="POST">
-        {% csrf_token %}
-        <label for="title">Title:</label>
-        <input type="text" name="title" placeholder="Enter title"><br>
+    <!-- ======= Contact Section ======= -->
+    <section class="contact mt-3" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+        <div class="container">
+  
+          <div class="row">
+  
+            <div class="col-lg-12">
+              <form action="{% url 'create_listing' %}" method="POST" role="form" class="php-email-form">
+                {% csrf_token %}
+                <div class="row"><!-- Title -->
+                    <div class="col-md-2 form-group">
+                      <label for="title">Title</label>
+                    </div>
 
-        <label for="description">Description:</label>
-        <input type="text" name="description" placeholder="Enter description"><br>
+                    <div class="col-md-1 form-group">
+                        <p>:</p>
+                    </div>
 
-        <label for="image_url">Image Url:</label>
-        <input type="text" name="image_url" placeholder="Enter image_url"><br>
+                    <div class="col-md-9 form-group mt-3 mt-md-0">
+                      <input type="text" class="form-control" name="title" id="email" placeholder="Enter title" required>
+                    </div>
+                </div>
 
-        <label for="starting_bid">Price:</label>
-        <input type="number" min="0" name="starting_bid" placeholder="price"><br>
+                <div class="row"><!-- Description -->
+                    <div class="col-md-2 form-group">
+                      <label for="description=">Description</label>
+                    </div>
 
-        <div class="form-group">
-            <label for="category">Categories:</label>
-            <select name="category" id="category">
-                {% for category in categories %}
-                    <option value="{{ category.id }}"> {{ category.category_name }} </option>
-                {% endfor %}
-            </select>
+                    <div class="col-md-1 form-group">
+                        <p>:</p>
+                    </div>
+
+                    <div class="col-md-9 form-group mt-3 mt-md-0">
+                      <input type="text" class="form-control" name="description" id="" placeholder="Enter description" required>
+                    </div>
+                </div>
+
+                <div class="row"><!-- Image Url -->
+                    <div class="col-md-2 form-group">
+                      <label for="image_url">Image_url</label>
+                    </div>
+
+                    <div class="col-md-1 form-group">
+                        <p>:</p>
+                    </div>
+
+                    <div class="col-md-9 form-group mt-3 mt-md-0">
+                      <input type="text" class="form-control" name="title" id="" placeholder="Enter image url" required>
+                    </div>
+                </div>
+
+
+                <div class="row"><!-- Price -->
+                    <div class="col-md-2 form-group">
+                      <label for="starting_bid">Price</label>
+                    </div>
+
+                    <div class="col-md-1 form-group">
+                        <p>:</p>
+                    </div>
+
+                    <div class="col-md-9 form-group mt-3 mt-md-0">
+                      <input type="number" class="form-control" name="starting_bid" id="" placeholder="Enter initial bid" required>
+                    </div>
+                </div>
+
+                <div class="row"><!-- Categories -->
+                    <div class="col-md-2 form-group">
+                      <label for="categories">Categories</label>
+                    </div>
+
+                    <div class="col-md-1 form-group">
+                        <p>:</p>
+                    </div>
+
+                    <div class="col-md-9 form-group mt-3 mt-md-0">
+                        <select name="category" id="category">
+                            {% for category in categories %}
+                                <option value="{{ category.id }}"> {{ category.category_name }} </option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+
+                <div class="text-center"><button type="submit">Create Auction</button></div>
+              </form>
+            </div>
+  
+          </div>
+  
         </div>
-        
-
-        <input type="submit" name="" value="Create New Item" id="">
-
-    </form>
+      </section><!-- End Contact Section -->
 {% endblock %}
