--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -38,7 +38,7 @@
     <section class="breadcrumbs">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
-                <h2>Our category</h2>
+                <h2>{% block heading %}{% endblock %}</h2>
                 <ol>
                     <li>{% block crumbs %}Our category{% endblock %}</li>
                 </ol>
